<resources>
    <string name="app_name">Android_FoodBot</string>
    <string name="email">Email</string>
    <string name="psw">Password</string>
    <string name="login">LOGIN</string>
    <string name="btn_link_to_singUp">NOT A MEMBER ? REGISTER NOW</string>
    <string name="pswForgot">Forgot Password ?</string>
    <string name="signUp">REGISTER</string>
    <string name="name">Name</string>
    <string name="btn_link_to_login">ALREADY REGISTERED? LOGIN!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_sign_out">SIGN OUT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="phone">Phone</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="menuName">Name of Menu</string>
    <string name="logout">Logout</string>
    <string name="placeOrder">Place Order</string>
    <string name="refresh">Refresh</string>

</resources>
