<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".AccountActivity.LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:src="@drawable/welcome"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"

            />



        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/custom_edit_text"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#B4B79A"
            android:textColor="#810716"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/psw"
            android:background="@drawable/custom_edit_text"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#B4B79A"
            android:textColor="#810716"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ff8c00"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>

        <!--<Button-->
            <!--android:id="@+id/btn_forgot_psw"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAlignment="center"-->
            <!--android:background="@null"-->
            <!--android:textAllCaps="false"-->
            <!--android:text="@string/pswForgot"-->
            <!--android:textColor="#810716"-->
            <!--android:textSize="14sp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginTop="40dp"/>-->
        <!--<CheckBox-->
            <!--android:id="@+id/ckbRemember"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="50dp"-->
            <!--android:textColor="#810716"-->
            <!--android:textSize="18sp"-->
            <!--android:buttonTint="@color/colorPrimary"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:text="Remember me"/>-->

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:background="@null"
            android:text="@string/btn_link_to_singUp"
            android:textColor="#810716"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />



    </LinearLayout>



</RelativeLayout>